apps/production/pgadmin/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pgadmin4
  annotations:
    traefik.ingress.kubernetes.io/router.middlewares: kube-system-https-redirect@kubernetescrd,kube-system-local-network-only@kubernetescrd
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - pgadmin.ronaldlokers.nl
  rules:
    - host: pgadmin.ronaldlokers.nl
      http:
        paths:
          - backend:
              service:
                name: pgadmin4
                port:
                  number: 80
            path: /
            pathType: Prefix
